objects/Facility__c.object
<CustomObject>
    <customHelpPage>General_Deal_Management</customHelpPage>
    <fields>
        <fullName>ACMFacility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ACMFacility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Agreement_Account__c</field>
                <operation>equals</operation>
                <valueField>ACMFacility__c.Relationship__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACMFacility__c</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acm_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Agreement_Account__c</field>
                <operation>equals</operation>
                <valueField>Acm_Facility__c.Relationship__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Acm_Facility__c</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Facilities</relationshipLabel>
        <relationshipName>Facilities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Availability_End_Date__c</fullName>
        <formula>IF( Availability_Start_Date__c != null &amp;&amp; ISPICKVAL(Availability__c,&apos;&apos;),DATE(0001, 1, 1), IF(
	ISPICKVAL(Availability__c,&apos;Day(s)&apos;),Availability_Start_Date__c + Availability_Period__c, IF( ISPICKVAL(Availability__c,&apos;Month(s)&apos;),
	 
DATE(
  YEAR( Availability_Start_Date__c) + FLOOR( ( MONTH ( Availability_Start_Date__c) + Availability_Period__c - 1 ) / 12 ),
  MOD( MONTH ( Availability_Start_Date__c) + Availability_Period__c - 1 + 
    IF( DAY ( Availability_Start_Date__c) &gt; CASE( MOD( MONTH( Availability_Start_Date__c) + Availability_Period__c - 1, 12 ) + 1, 
      2, 28,
      4, 30,
      6, 30,
      9, 30, 
      11, 30,
      31 ), 1, 0 ), 12 ) + 1,
    IF( DAY( Availability_Start_Date__c) &gt; CASE( MOD( MONTH( Availability_Start_Date__c ) + Availability_Period__c - 1, 12 ) + 1,
      2, 28, 
      4, 30, 
      6, 30, 
      9, 30, 
      11, 30, 
      31 ), 
    1, DAY( Availability_Start_Date__c)
  )
)






, DATE(YEAR(Availability_Start_Date__c)+Availability_Period__c, MONTH(Availability_Start_Date__c), DAY(Availability_Start_Date__c))



)))</formula>
        <label>Availability End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Availability_Period__c</fullName>
        <label>Availability Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Availability_Start_Date__c</fullName>
        <label>Availability Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalFacilityId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalFacilityId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityLimitBalance__c</fullName>
        <description>RN - CloudSmiths</description>
        <label>Facility Limit Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility_Limit__c</fullName>
        <label>Facility Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <label>Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Facility_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Year_End_Date__c</fullName>
        <formula>Agreement__r.Financial_Year_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Year End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lender_Portion_Total_Amount__c</fullName>
        <label>Lender Portion Total Amount</label>
        <summarizedField>Facility_Party__c.Facility_Amount__c</summarizedField>
        <summaryForeignKey>Facility_Party__c.Facility__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Repayment_Profile_Type__c</fullName>
        <label>Repayment Profile Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Repayment_Profile_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature_Date__c</fullName>
        <label>Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_User__c</fullName>
        <label>Source User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Agreement_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenure_Period__c</fullName>
        <label>Tenure Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tenure_Period</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tranche_Limit__c</fullName>
        <label>Tranche Limit</label>
        <summarizedField>Facility_Tranche__c.Tranche_Limit__c</summarizedField>
        <summaryForeignKey>Facility_Tranche__c.Facility__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Facility</label>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lender_Portion_Amount_Exceed_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Lender_Portion_Total_Amount__c &gt; Facility_Limit__c, True, False)</errorConditionFormula>
        <errorMessage>The Lender Portion Amount cannot exceed the Facility Limit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tranche_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK(Facility_Limit__c ) == FALSE &amp;&amp; Tranche_Limit__c &gt;  Facility_Limit__c, TRUE, IF(ISBLANK(Facility_Limit__c ) == TRUE, TRUE, FALSE) )</errorConditionFormula>
        <errorDisplayField>Facility_Limit__c</errorDisplayField>
        <errorMessage>Please ensure that the Facility Limit is not exceeded.</errorMessage>
    </validationRules>
</CustomObject>